# Nuit-Info-2024-G2

./: .flake8  .gitignore  README.md  cleancode.sh  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  template.env
app/: Dockerfile  Dockerfile.dev  entrypoint.dev.sh  entrypoint.sh  manage.py
app/apps/authentication/: forms.py  urls.py  views.py
app/apps/authentication/templates/: capcha.html  login.html  register.html
app/apps/core/: admin.py  models.py  signals.py  urls.py  views.py
app/apps/core/migrations/: 0001_initial.py  0002_informationorgane_remove_pokecoin_valeur.py
app/apps/core/templates/: chalutier.html  foie.html  home.html  jeu-coeur.html  jeu-reins.html
app/apps/core_api/: urls.py
app/apps/core_api/serializer/: pokecoin.py  profile.py  succe.py
app/apps/core_api/view/: pokecoin.py  profile.py  succe.py
app/apps/custom_error/: apps.py  views.py
app/apps/custom_error/templates/: error.html
app/apps/infos/: models.py  urls.py  views.py
app/apps/infos/migrations/: 0001_initial.py
app/apps/infos/templates/: info.html  podcast.html
app/nuitinfo/: asgi.py  urls.py  wsgi.py
app/nuitinfo/settings/: base.py  development.py  production.py
app/static/css/capcha/: style.css
app/static/css/common/: base.css
app/static/css/foie/: style.css
app/static/css/info/: style.css
app/static/js/capcha/: script.js
app/static/js/foie/: script.js
app/templates/: base.html
app/templates/partials/: header.html  message.html
nginx/: Dockerfile.dev  default.conf  generate_certificate.py  nginx.dev.conf
(+13 files in other folders)
