[tool.poetry]
name = ""
version = "1.0"
description = ""
authors = ["FruitPassion <gamehotdl@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.6"
pyopenssl = "^24.2.1"
psycopg = "^3.1.18"
beautifulsoup4 = "^4.12.3"
jsbeautifier = "^1.15.1"
cssbeautifier = "^1.15.1"
djlint = "^1.34.1"
django-rest-framework = "^0.1.0"
django-cors-headers = "^4.3.1"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.3"
tqdm = "^4.66.4"
django-redis = "^5.4.0"
django-extensions = "^3.2.3"
django-fontawesome-5 = "^1.0.18"
django-admin-interface = "^0.29.1"
django-colorfield = "^0.11.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"
build = "^1.0.3"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 200
